force-app/main/default/objects/ServiceAppointment/fields/Created_date_time__c.field-meta.xml
<CustomField>
    <fullName>Created_date_time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>