force-app/main/default/objects/ServiceAppointment/fields/FSM_OnHoldComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_OnHoldComments__c</fullName>
    <description>Created as a part of SFL-1079</description>
    <label>On Hold Comments (Latest)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>