force-app/main/default/objects/ServiceAppointment/fields/FSM_OnHoldReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_OnHoldReason__c</fullName>
    <description>Stores on hold reason. Populated by status update flow when a service point is updated to On Hold.</description>
    <label>On Hold Reason (Latest)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer not available</fullName>
            </value>
            <value>
                <fullName>Emergency work received</fullName>
            </value>
            <value>
                <fullName>Parked Cars</fullName>
            </value>
            <value>
                <fullName>Returning Next Day</fullName>
            </value>
            <value>
                <fullName>TM not available</fullName>
            </value>
            <value>
                <fullName>Waiting for equipment</fullName>
            </value>
            <value>
                <fullName>Waiting for resource</fullName>
            </value>
            <value>
                <fullName>Ticket Organisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>