force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>FSM_SAPOrderOperationNumber__c</columns>
    <columns>Name</columns>
    <columns>FSM_WorkTypeCode__c</columns>
    <columns>Status</columns>
    <columns>DurationInMinutes</columns>
    <columns>FSM_SiteNameAuto__c</columns>
    <columns>FSM_SAPJobPriority__c</columns>
    <columns>FSM_ServiceOrderType__c</columns>
    <columns>SchedStartTime</columns>
    <columns>LatestEndTime</columns>
    <columns>WorkType</columns>
    <columns>ServiceTerritory</columns>
    <columns>CreatedDate</columns>
    <columns>FSM_Longitude__c</columns>
    <columns>FSM_Latitude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Appointments</label>
    <sharedTo>
        <group>FSM_BusinessAdminGroup</group>
        <group>FSM_DeveloperServices</group>
        <group>FSM_Metering</group>
        <group>FSM_SystemAdminPublicGroup</group>
        <group>FSM_WasteInfra</group>
        <group>FSM_WasteNonInfra</group>
        <group>FSM_WaterInfra</group>
        <group>FSM_WaterNonInfra</group>
    </sharedTo>
</ListView>