force-app/main/default/objects/ServiceAppointment/listViews/Backlog.listView-meta.xml
<ListView>
    <fullName>Backlog</fullName>
    <columns>Name</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>FSM_WorkTypeCode__c</columns>
    <columns>Status</columns>
    <columns>ZIP</columns>
    <columns>LatestEndTime</columns>
    <columns>FSM_HoursUntilDueDate__c</columns>
    <columns>FSM_SAPJobPriority__c</columns>
    <columns>FSM_ConstraintStart__c</columns>
    <columns>FSM_ConstraintEnd__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>FSSK__FSK_Assigned_Service_Resource__c</columns>
    <columns>FSM_StandardTextKey__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,Rejected</value>
    </filters>
    <filters>
        <field>ServiceTerritory</field>
        <operation>contains</operation>
        <value>WD4</value>
    </filters>
    <filters>
        <field>FSM_HoursUntilDueDate__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>FSM_ExternalId__c</field>
        <operation>startsWith</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>FSM_StandardTextKey__c</field>
        <operation>notEqual</operation>
        <value>CINSP</value>
    </filters>
    <label>Backlog DST</label>
    <sharedTo>
        <group>FSM_WaterInfra</group>
    </sharedTo>
</ListView>