force-app/main/default/objects/ServiceAppointment/listViews/P1_P3_Out_of_SLA.listView-meta.xml
<ListView>
    <fullName>P1_P3_Out_of_SLA</fullName>
    <columns>Name</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>ZIP</columns>
    <columns>FSM_WorkTypeCode__c</columns>
    <columns>Status</columns>
    <columns>LatestEndTime</columns>
    <columns>FSM_HoursUntilDueDate__c</columns>
    <columns>FSM_SAPJobPriority__c</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,Scheduled,Rejected,Dispatched</value>
    </filters>
    <filters>
        <field>ServiceTerritory</field>
        <operation>contains</operation>
        <value>WD4</value>
    </filters>
    <filters>
        <field>FSM_HoursUntilDueDate__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>FSM_SAPJobPriority__c</field>
        <operation>lessOrEqual</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>FSM_StandardTextKey__c</field>
        <operation>notContain</operation>
        <value>CINSP</value>
    </filters>
    <label>P1-P3 Out of SLA</label>
    <sharedTo>
        <group>FSM_WaterInfra</group>
    </sharedTo>
</ListView>