force-app/main/default/objects/ServiceAppointment/listViews/STS_Current_JobsWater.listView-meta.xml
<ListView>
    <fullName>STS_Current_JobsWater</fullName>
    <columns>FSM_IconForWasteInfra__c</columns>
    <columns>Status</columns>
    <columns>FSM_AllocatedJob__c</columns>
    <filterScope>Everything</filterScope>
    <label>WATER STS - Current Jobs</label>
    <sharedTo>
        <group>FSM_FW_WaterInfra</group>
    </sharedTo>
</ListView>