force-app/main/default/objects/ServiceAppointment/listViews/Unappointed_CI_Work.listView-meta.xml
<ListView>
    <fullName>Unappointed_CI_Work</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND 6 AND 7</booleanFilter>
    <columns>Name</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>Status</columns>
    <columns>ZIP</columns>
    <columns>LatestEndTime</columns>
    <columns>FSM_Polygon__c</columns>
    <columns>FSM_SAPJobPriority__c</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <columns>FSM_WorkTypeCode__c</columns>
    <columns>FSM_StandardTextKey__c</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_StandardTextKey__c</field>
        <operation>equals</operation>
        <value>CINSP</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <filters>
        <field>ArrivalWindowStartTime</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,Rejected</value>
    </filters>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ServiceTerritory</field>
        <operation>contains</operation>
        <value>1301,1103</value>
    </filters>
    <filters>
        <field>FSM_ExternalId__c</field>
        <operation>startsWith</operation>
        <value>0</value>
    </filters>
    <label>Open CI Appointments (Leic &amp; Warks)</label>
    <sharedTo>
        <group>FSM_WaterInfra</group>
    </sharedTo>
</ListView>